Se agrego la grafica de las ventas y se removio el ultimo elemento.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Panel de Administración</title>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@latest/dist/Chart.min.js"></script>
 </head>
 
 <body>
@@ -96,8 +97,9 @@
       </div>
     </section>
     <section class="grid">
-      <article></article>
-      <article></article>
+      <article>
+        <canvas id="graficaGanacias"></canvas>
+      </article>
       <article></article>
       <article></article>
       <article></article>
